--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,28 @@
-node_modules/
-dist/
-.env
+######## SERVER ########
+server/node_modules/
+server/dist/
+server/.env
+
+######## CLIENT ########
+
+# dependencies
+client/node_modules
+client/.pnp
+client/.pnp.js
+
+# testing
+client/coverage
+
+# production
+client/build
+
+# misc
+client/.DS_Store
+client/.env.local
+client/.env.development.local
+client/.env.test.local
+client/.env.production.local
+
+client/npm-debug.log*
+client/yarn-debug.log*
+client/yarn-error.log*
