Add router and styled components

--- a/client/package.json
+++ b/client/package.json
@@ -10,16 +10,20 @@
     "format": "prettier --write \"**/*.{tsx,ts,css,scss,md,js,json,html}\""
   },
   "dependencies": {
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.8",
+    "styled-components": "^4.2.0",
+    "typescript": "3.4.1"
+  },
+  "devDependencies": {
     "@types/jest": "24.0.11",
     "@types/node": "11.12.2",
     "@types/react": "16.8.10",
     "@types/react-dom": "16.8.3",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8",
-    "typescript": "3.4.1"
-  },
-  "devDependencies": {
+    "@types/react-router-dom": "^4.3.1",
+    "@types/styled-components": "^4.1.12",
     "prettier": "^1.16.4"
   },
   "eslintConfig": {
