--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "apollo-server-express": "^2.4.8",
     "express": "^4.16.4",
-    "graphql": "^14.2.0"
+    "graphql": "^14.2.0",
+    "graphql-tools": "^4.0.4"
   }
 }
