--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write \"**/*.{tsx,ts,css,scss,md,js,json,html}\""
   },
   "dependencies": {
+    "query-string": "^6.4.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@types/jest": "24.0.11",
     "@types/node": "11.12.2",
+    "@types/query-string": "^6.3.0",
     "@types/react": "16.8.10",
     "@types/react-dom": "16.8.3",
     "@types/react-router-dom": "^4.3.1",
